Fixing some layout issues

--- a/public/css/active.scss
+++ b/public/css/active.scss
@@ -58,7 +58,7 @@
 			font-size: 48px;
 			line-height: 90px;
 			color: $dark-brown;
-			display: inline;
+			float: left;
 			margin-left: 0.5em;
 		}
 	
@@ -94,6 +94,10 @@
 		}
 	}
 
+	div#main {
+		 clear: left;
+	}
+
 	label {
 		display: inline-block;
 		width: 80px;
@@ -106,7 +110,7 @@
 	}
 
 	#action-in {
-		width: 79%;
+		width: 60%;
 	}
 
 	#category-in {
